
next
----
- added setting to enable/disable built-in sound groups
- added setting to disable individual sound groups categories
- shortened sounds rain_light, rain_medium, & wind
- added sounds:
	- church_bells


v1.10.1
-------
- deleted sounds:
	- melee_hit_04
	- melee_hit_07
	- melee_hit_08
	- melee_hit_09
	- melee_hit_10
	- melee_hit_11
	- melee_hit_12
	- melee_hit_13
	- melee_hit_14
	- melee_hit_16
- renamed sounds:
	- melee_hit_05 to melee_hit_04
	- melee_hit_06 to melee_hit_05
	- melee_hit_15 to melee_hit_06


v1.10
-----
- added method "sounds:play_random"
- added "random" play button to tests
- changed to require "prepend" to prefix sound files with "sounds_"
- fixed inheriting "prepend" attribute when concatenating SoundGroup instances with arithmetic operator
- added iSoundGroup object meant for use with sounds prefixed with "sounds_" only
- fixed length of clock_tick so loops
- deleted "node_place_metal" sounds duplicates of "node_dug_metal"
- deleted some of the less useful compound groups
- renamed sounds:
	- some "ar_fire sounds" to "ar_burst"
- added sounds:
	- ar_burst
	- cicada
	- explosion
	- explosion_distant
	- explosion_scifi
	- fireworks
	- fireworks_pop
	- fuse_short
	- ghost
	- ghost_damage
	- ghost_death
	- helicopter
	- melee_hit
	- plasma_shot
	- scrape
	- shears
	- zombie_damage
	- zombie_growl


v1.9
----
- "sounds:play" now returns handle & sound file name string
- added "sounds:stop" wrapper function for "core:sound_stop"
- added setting "sounds.enable_tests"
- added sounds testing formspec shown with "/sounds_tests" chat command
- added localization support for sounds testing formspec
- added Spanish translation for sounds testing formspec
- added sounds:
	- ar_fire
	- fireball
	- laser
	- pistol_cock
	- pistol_fire
	- pistol_fire_dry
	- pistol_reload
	- ricochet
	- rifle_cock
	- rifle_fire
	- rifle_fire_cock
	- rifle_fire_dry
	- rifle_small_fire
	- shotgun_fire_pump
	- shotgun_pump


v1.8
----